# glacier_daily

./: .gitignore  .pre-commit-config.yaml  .sops.yaml  TEMPLATE.env  TODO  TODO.md  __init__.py  api-reference.md  codecov.yml  config.template.env  email.enc.env  email.template.env  generate_and_upload.py  main.py  pyproject.toml  readme.MD  readme.md  requirements.txt  retry_check.py  web.py  web_version.py
.github/workflows/: deploy.yml  tests.yml
activities/: __init__.py  events.py  gnpc_datetime.py  gnpc_events.py
docs/: api-reference.md
drip/: __init__.py  canary_check.py  drip_actions.py  get_subs.py  html_friendly.py  scheduled_subs.py  subscriber_list.py  update_subscriber.py
email_html/: backup 5-1-21.html  email_template.html  email_template_editorial.html  printable.html  printable_cards.html  wifi_email.html  wifi_email_cards.html
email_html/legacy/: email_template.html  printable.html  wifi_email.html
frontend_files/: campgroundStatusUpdate.js  glacier_daily.php  htaccess
image_otd/: __init__.py  flickr.py  image_otd.py
notices/: __init__.py  notices.py
peak/: PeaksCSV.csv  __init__.py  fetch_wikipedia.py  peak.py  peaks_no_wikipedia.csv  peaks_wikipedia.json  sat.py
product_otd/: __init__.py  product.py
roads/: HikerBiker.py  Place.py  Road.py  __init__.py  hiker_biker.py  hiker_biker_closure.py  place.py  places.py  road.py  roads.py
scripts/: encrypt-secrets.sh
server/: campgroundStatusUpdate.js  daily_web.php  editorial.html  glacier_daily.php  htaccess  printable_editorial.html  status.html  test.json  today.html  trailStatusUpdate.js  webTemplating.js  web_templating.js  wifi.html
shared/: __init__.py  config_validation.py  constants.py  context_executor.py  data_types.py  datetime_utils.py  env_loader.py  ftp.py  image_utils.py  lkg_cache.py  lock.py  logging_config.py  retrieve_from_json.py  retry.py  run_context.py  run_report.py  settings.py  timing.py
sunrise_timelapse/: __init__.py  ftp.py  get_timelapse.py  sleep_to_sunrise.py  timelapse_json.py  vid_frame.py
test/: conftest.py  test_activities.py  test_aqi_sunset.py  test_canary_check.py  test_data.py  test_datetime_utils.py  test_drip.py  test_env_verification.py  test_frontcountry_cgs.py  test_ftp.py  test_gen_data_integration.py  test_generate_and_upload.py  test_get_timelapse.py  test_hiker_biker.py  test_image_otd.py  test_image_utils.py  test_integration_contracts.py  test_json.py  test_lkg_cache.py  test_lock.py  test_logging_config.py  test_main.py  test_new_functionality.py  test_night_sky.py  test_notices.py  test_peaks.py  test_potd.py  test_retrieve_from_json.py  test_retry.py  test_retry_check.py  test_road.py  test_roads_module.py  test_run_context.py  test_run_report.py  test_settings.py  test_sleep_to_sunrise.py  test_sunset_hue.py  test_timelapse.py  test_timelapse_frame.py  test_timelapse_json.py  (+4 more)
test/files/: events.txt
test/weather/: test_aqi_sunset.py  test_forecast.py  test_night_sky.py  test_season.py  test_weather.py  test_weather_alerts.py  test_weather_img.py
trails_and_cgs/: __init__.py  frontcountry_cgs.py  roads.py  trails.py
weather/: __init__.py  forecast.py  new_forecast.py  night_sky.py  season.py  sunset_hue.py  test_alerts.txt  weather.py  weather_alerts.py  weather_aqi.py  weather_img.py
