[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glacier-daily"
version = "1.1.0"
description = "Daily email updates about conditions at Glacier National Park"
authors = [
    {name = "Andrew Smith", email = "andrew@glacier.org"},
]
readme = "readme.MD"
requires-python = "==3.9.*"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "astral==2.2",
    "beautifulsoup4>=4.13.4",
    "flickrapi>=2.4.0",
    "gspread>=6.2.1",
    "jinja2>=3.1.6",
    "pillow>=11.3.0",
    "protobuf>=6.31.1",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "requests-cache>=1.3.0",
    "tzdata>=2024.1",
    "urllib3>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.9.7",
]

[project.scripts]
glacier-daily = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["activities", "drip", "image_otd", "notices", "peak", "product_otd", "roads", "shared", "sunrise_timelapse", "trails_and_cgs", "weather"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "S",     # flake8-bandit (security)
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # use of assert (needed in tests)
    "S603",  # subprocess without shell=True check
    "S607",  # starting a process with a partial executable path
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = ["S"]   # disable security warnings in tests
"main.py" = ["E402"]     # load_dotenv must run before project imports

[tool.coverage.run]
omit = [
    "config-3.py",
    "config.py",
    "peak/fetch_wikipedia.py",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::urllib3.exceptions.NotOpenSSLWarning",
]
