[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glacier-daily"
version = "2.1.0"
description = "Daily email updates about conditions at Glacier National Park"
authors = [
    {name = "Andrew Smith", email = "andrew@glacier.org"},
]
readme = "readme.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "astral==2.2",
    "beautifulsoup4>=4.13.4",
    "flickrapi>=2.4.0",
    "gspread>=6.2.1",
    "jinja2>=3.1.6",
    "pillow>=11.3.0",
    "protobuf>=6.31.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "requests-cache>=1.3.0",
    "tzdata>=2024.1",
    "urllib3>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.9.7",
    "ty>=0.0.1a7",
]

[project.scripts]
glacier-daily = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["activities", "drip", "image_otd", "notices", "peak", "product_otd", "roads", "shared", "sunrise_timelapse", "trails_and_cgs", "weather"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "S",     # flake8-bandit (security)
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
    "C4",    # flake8-comprehensions
    "PERF",  # perflint (performance)
    "PIE",   # flake8-pie (misc practices)
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = ["S"]          # disable security warnings in tests
"retry_check.py" = ["S603"]     # subprocess.run with trusted input

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
exclude = [
    "frontend_files/",
    "server/",
    "email_html/",
]

# Test files use mocks, intentional bad types, and duck-typed objects
# that are incompatible with strict type checking
[[tool.ty.overrides]]
include = ["test/**/*.py"]
[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
too-many-positional-arguments = "ignore"
missing-argument = "ignore"
unresolved-attribute = "ignore"
unsupported-operator = "ignore"

[tool.coverage.run]
omit = [
    "peak/fetch_wikipedia.py",
]

[tool.coverage.report]
omit = [
    "peak/fetch_wikipedia.py",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config"
filterwarnings = [
    "ignore::urllib3.exceptions.NotOpenSSLWarning",
]
